allmost done home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&family=Spline+Sans:wght@700&display=swap" rel="stylesheet">
-    <title>Vite App</title>
+    <title>Mosaab Laboune - Portfolio</title>
     <style>
       @import url("https://use.typekit.net/fkc5vvx.css");
       @font-face {
