--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         margin: 0;
         padding: 0;
         font-size: 16px;
+        background-color: #091F29;
+        background-image: url(/public/code_bg.png);
+        background-position: center center;
+        background-size: 85rem;
       }
     </style>
   </head>
