finish building Home Page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         background-color: #091F29;
         background-image: url(/public/code_bg.png);
         background-position: center center;
+        background-attachment: fixed;
         background-size: 85rem;
       }
     </style>
