edit some stuff

--- a/index.html
+++ b/index.html
@@ -7,40 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&family=Spline+Sans:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Mosaab Laboune - Portfolio</title>
-    <style>
-      @import url("https://use.typekit.net/fkc5vvx.css");
-      @font-face {
-        font-family: 'Cascadia Code', sans-serif;
-        src: url('/public/Font/ttf/CascadiaCode.ttf') format('ttf'),
-             url('/public/Font/woff2/CascadiaCode.woff2') format('woff2')
-      }
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      /* Works on Firefox */
-      * {
-        scrollbar-width: thin;
-        scrollbar-color: #2b9ccc #fff;
-      }
-
-      /* Works on Chrome, Edge, and Safari */
-      * {
-        scroll-behavior: smooth;
-      }
-      *::-webkit-scrollbar {
-        width: .5rem;
-      }
-
-      *::-webkit-scrollbar-track {
-        background: transparent;
-      }
-
-      *::-webkit-scrollbar-thumb {
-        background-color: #2b9ccc;
-      }
-    </style>
   </head>
   <body>
     <div id="app"></div>
